--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.4.2"
+    "@astrojs/mdx": "^4.1.0",
+    "@astrojs/rss": "^4.0.11",
+    "@tailwindcss/vite": "^4.0.11",
+    "astro": "^5.4.2",
+    "tailwindcss": "^4.0.11"
   }
 }
