--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@astrojs/rss": "^4.0.11",
     "@tailwindcss/vite": "^4.0.11",
     "astro": "^5.4.2",
+    "markdown-it": "^14.1.0",
+    "sanitize-html": "^2.14.0",
     "tailwindcss": "^4.0.11"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
+    "@types/sanitize-html": "^2.13.0"
   }
 }
